--- a/front/about.html
+++ b/front/about.html
@@ -2,12 +2,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/globals.css" />
-    <link rel="stylesheet" href="css/styleguide.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/globals.css" />
+    <link rel="stylesheet" href="../css/styleguide.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 </head>
 
@@ -19,7 +19,7 @@
                     <div class="logo">
                         <div class="overlap-group">
                             <a href="landing.html">
-                                <img class="untitled" src="img/untitled-1.png" />
+                                <img class="untitled" src="../img/untitled-1.png" />
                                 <div class="text-wrapper">Academy</div>
                                 <div class="text-wrapper-2">Keeper</div>
                             </a>
@@ -87,7 +87,7 @@
                 <div class="intro secount-intro">The College Management System (CMS) is designed to streamline administrative tasks, enhance communication, and improve
                 the overall educational experience for administrators, teachers, and students. With features like user-friendly
                 dashboards, real-time updates, and comprehensive course management tools, CMS transforms how colleges operate.</div>
-                <dir class="about-img"><img src="/img/about.png" alt=""></dir>
+                <dir class="about-img"><img src="../img/about.png" alt=""></dir>
             </div>
         </div>
     </div>
@@ -119,7 +119,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/clipboard.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/clipboard.svg" /></div>
                                     
                                         <div class="heading-link">
                                             <div class="text-wrapper-2">Student Enrollment Management</div>
@@ -137,7 +137,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/calendar.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/calendar.svg" /></div>
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
@@ -155,7 +155,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/book.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/book.svg" /></div>
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
@@ -176,7 +176,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/bar-chart.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/bar-chart.svg" /></div>
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
@@ -195,7 +195,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/pie-chart.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/pie-chart.svg" /></div>
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
@@ -214,7 +214,7 @@
                         <div class="container-wrapper">
                             <div class="background-shadow-wrapper">
                                 <div class="background-shadow">
-                                    <div class="img-wrapper"><img class="img-services" src="img/globe.svg" /></div>
+                                    <div class="img-wrapper"><img class="img-services" src="../img/globe.svg" /></div>
                                     <a href="file:///D:/xampp/htdocs/Academy%20Keeper/Arsha/index.html" target="_blank"
                                         rel="noopener noreferrer">
                                         <div class="heading-link">
@@ -250,7 +250,7 @@
         Our testimonials showcase the success stories of our clients, reflecting the
         impact and quality of our solutions.
     </div>
-    <img class="star" src="/img/star0.svg" />
+    <img class="star" src="../img/star0.svg" />
     <div class="implementing-this-system-has-revolutionized-our-workflow-it-s-user-friendly-and-saves-us-so-much-time">
         &quot;Implementing this system has revolutionized our workflow. It’s
         user-friendly and saves us so much time!&quot;
@@ -261,9 +261,9 @@
         Administrator,Sungava college
         <br />
     </div>
-    <img class="an-1" src="/img/an-10.png" />
-    <img class="star2" src="/img/star1.svg" />
-    <img class="an-2" src="/img/an-20.png" />
+    <img class="an-1" src="../img/an-10.png" />
+    <img class="star2" src="../img/star1.svg" />
+    <img class="an-2" src="../img/an-20.png" />
     <div class="mukesh-kandel-administrator-chadigava-college">
         Mukesh Kandel
         <br />
@@ -285,8 +285,8 @@
         Administrator, Oxford college
         <br />
     </div>
-    <img class="star3" src="/img/star2.svg" />
-    <img class="an-3" src="/img/an-30.png" />
+    <img class="star3" src="../img/star2.svg" />
+    <img class="an-3" src="../img/an-30.png" />
 </div>
 
 
@@ -297,7 +297,7 @@
     and Insights to Enhance Your Understanding and Address Your Concerns Effectively...  </p>
       </div>
 
-    <div class="img"><img src="/img/why-us-png0.png" alt=""></div>
+    <div class="img"><img src="../img/why-us-png0.png" alt=""></div>
 
     <button class="question" onclick="toggleAnswer(this);toggleRotationById('one')">
       <div class="head">
@@ -305,7 +305,7 @@
         <div class="q1">
           What features does the College Management system offer?
         <div class="aro" id="one">
-          <img src="/img/chevron.svg" alt="">
+          <img src="../img/chevron.svg" alt="">
         </div>
         </div>
       </div>
@@ -322,7 +322,7 @@
         <div class="num">02</div>
         <div class="q1">How does the College Management system improve communication?
           <div class="aro" id="two">
-            <img src="/img/chevron.svg" alt="">
+            <img src="../img/chevron.svg" alt="">
           </div>
         </div>
       </div>
@@ -337,7 +337,7 @@
         <div class="num">03</div>
         <div class="q1">What support is available for users of the College Management system?
           <div class="aro" id="three">
-            <img src="/img/chevron.svg" alt="">
+            <img src="../img/chevron.svg" alt="">
           </div>
         </div>
       </div>
@@ -352,7 +352,7 @@
         <div class="num">04</div>
         <div class="q1">Who can use the system?
           <div class="aro" id="four">
-            <img src="/img/chevron.svg" alt="">
+            <img src="../img/chevron.svg" alt="">
           </div>
         </div>
       </div>
@@ -369,7 +369,7 @@
         <div class="q1">
             How secure is my data in the College Management system?
             <div class="aro" id="five">
-              <img src="/img/chevron.svg" alt="">
+              <img src="../img/chevron.svg" alt="">
             </div>
         </div>
       </div>
@@ -396,7 +396,7 @@
                                 <div class="div-wrapper">
                                     <div class="logo-2">
                                         <div class="overlap-group"><a href="#home">
-                                                <img class="untitled" src="img/untitled-1-1.png" />
+                                                <img class="untitled" src="../img/untitled-1-1.png" />
                                                 <div class="text-wrapper-31">Academy</div>
                                                 <div class="text-wrapper-32">Keeper</div>
                                         </div>
@@ -434,7 +434,7 @@
                                 <div class="item-2">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
         
                                         </div>
                                     </div>
@@ -446,7 +446,7 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -456,7 +456,7 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -466,11 +466,11 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
-                                        <div class="text-wrapper-37">Terms of service</div>
+                                        <div class="text-wrapper-37"><a href="tearms.html"> Terms of service </a></div>
                                     </div>
                                 </div>
                             </div>
@@ -485,7 +485,7 @@
                                 <div class="item-2">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -495,7 +495,7 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -505,7 +505,7 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -515,7 +515,7 @@
                                 <div class="item-3">
                                     <div class="margin-18">
                                         <div class="symbol-6">
-                                            <img class="footer_pointy_thing" src="./img/Chevron up.svg" alt="">
+                                            <img class="footer_pointy_thing" src="../img/Chevron up.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="div-wrapper">
@@ -539,7 +539,7 @@
                                     <div class="link-7">
                                         <div class="container-64">
                                             <div class="symbol">
-                                                <img class="social" src="./img/Instagram.svg" alt="">
+                                                <img class="social" src="../img/Instagram.svg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -548,7 +548,7 @@
                                     <div class="link-7">
                                         <div class="container-64">
                                             <div class="symbol">
-                                                <img class="social" src="./img/Facebook.svg" alt="">
+                                                <img class="social" src="../img/Facebook.svg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -557,7 +557,7 @@
                                     <div class="link-7">
                                         <div class="container-64">
                                             <div class="symbol">
-                                                <img class="social" src="./img/Twitter.svg" alt="">
+                                                <img class="social" src="../img/Twitter.svg" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -566,7 +566,7 @@
                                     <div class="link-7">
                                         <div class="container-64">
                                             <div class="symbol">
-                                                <img class="social" src="./img/Github.svg" alt="">
+                                                <img class="social" src="../img/Github.svg" alt="">
                                             </div>
                                         </div>
                                     </div>
