--- a/front/signup.html
+++ b/front/signup.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
-    <link rel="stylesheet" href="./css/signup.css" />
-    <link rel="stylesheet" href="./css/globals.css" />
-    <link rel="stylesheet" href="./css/styleguide.css" />
-    <script src="./js/signup.js"></script>
+    <link rel="stylesheet" href="../css/signup.css" />
+    <link rel="stylesheet" href="../css/globals.css" />
+    <link rel="stylesheet" href="../css/styleguide.css" />
+    <script src="../js/signup.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="image-section">
-        <img src="./img/about.png" alt="Sign Up Image" />
+        <img src="../img/about.png" alt="Sign Up Image" />
       </div>
       <div class="form-section">
         <div class="logo">
-          <img src="./img/untitled-1-1.png" alt="Logo" />
+          <img src="../img/untitled-1-1.png" alt="Logo" />
         </div>
         <h2 class="signup">Sign up</h2>
         <p class="intro-text">
@@ -94,7 +94,7 @@
           <div class="checkbox-group">
             <input type="checkbox" name="terms" required />
             <label
-              >I agree to all the <a href="#">Terms</a> and
+              >I agree to all the <a href="tearms.html">Terms</a> and
               <a href="#">Privacy Policies</a></label
             >
           </div>
@@ -109,7 +109,7 @@
                 <div class="symbol">
                   <img
                     class="social"
-                    src="./img/Twitter.svg"
+                    src="../img/Twitter.svg"
                     alt="Twitter Icon"
                   />
                 </div>
@@ -121,7 +121,7 @@
                 <div class="symbol">
                   <img
                     class="social"
-                    src="./img/Github.svg"
+                    src="../img/Github.svg"
                     alt="Github Icon"
                   />
                 </div>
@@ -137,7 +137,7 @@
                 <div class="symbol">
                   <img
                     class="social"
-                    src="./img/Instagram.svg"
+                    src="../img/Instagram.svg"
                     alt="Instagram Icon"
                   />
                 </div>
@@ -153,7 +153,7 @@
                 <div class="symbol">
                   <img
                     class="social"
-                    src="./img/Facebook.svg"
+                    src="../img/Facebook.svg"
                     alt="Facebook Icon"
                   />
                 </div>
