Updated hover on social icon and changed logo

--- a/front/signup.html
+++ b/front/signup.html
@@ -16,7 +16,11 @@
       </div>
       <div class="form-section">
         <div class="logo">
-          <img src="../img/untitled-1-1.png" alt="Logo" />
+          <a href="landing.html">
+            <img src="../img/untitled-1-1.png" alt="Logo" class="logoimg" />
+            <div class="text-a">Academy</div>
+            <div class="text-k">Keeper</div>
+          </a>
         </div>
         <h2 class="signup">Sign up</h2>
         <p class="intro-text">
@@ -95,12 +99,12 @@
             <input type="checkbox" name="terms" required />
             <label
               >I agree to all the <a href="tearms.html">Terms</a> and
-              <a href="#">Privacy Policies</a></label
+              <a href="../front/Policies.html">Privacy Policies</a></label
             >
           </div>
           <button type="submit" class="btn">Create account</button>
           <p class="login-text">
-            Already have an account? <a href="#">Login</a>
+            Already have an account? <a href="../front/Login.html">Login</a>
           </p>
           <p class="or-option">Or sign up with</p>
           <div class="social-icons">
