Update CSS and JavaScript files

--- a/front/tearms.html
+++ b/front/tearms.html
@@ -6,12 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service</title>
     
+    <link rel="stylesheet" href="../css/loading.css">
     <link rel="stylesheet" href="../css/terms.css">
     <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/styleguide.css" />
+
+        <script src="../js/loading.js"></script>
 </head>
 
-<body>
+<body >
+                <div class="loading">
+                    <div class="loader">
+                        <div>
+
+                            <ul>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                                <li>
+                                    <svg fill="currentColor" viewBox="0 0 90 120">
+                                        <path
+                                            d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z">
+                                        </path>
+                                    </svg>
+                                </li>
+                            </ul>
+                        </div><span>Loading</span>
+                    </div>
+                </div>
     <header>
         <div class="logo">
             <a href="landing.html">
@@ -98,6 +152,7 @@
         </section>
     </main>
 
+    <div class="frame">
         <footer class="footer">
             <div class="container-56">
                 <div class="container-57">
@@ -247,7 +302,7 @@
                             </div>
                             <div class="container-63">
                                 <div class="link-margin-4">
-                                    <div class="link-7">
+                                    <div class="link-7" style="width: 16px;" >
                                         <div class="container-64">
                                             <div class="symbol">
                                                 <img class="social" src="../img/Instagram.svg" alt="">
@@ -256,7 +311,7 @@
                                     </div>
                                 </div>
                                 <div class="link-margin-4">
-                                    <div class="link-7">
+                                    <div class="link-7" style="width: 16px;" >
                                         <div class="container-64">
                                             <div class="symbol">
                                                 <img class="social" src="../img/Facebook.svg" alt="">
@@ -265,7 +320,7 @@
                                     </div>
                                 </div>
                                 <div class="link-margin-4">
-                                    <div class="link-7">
+                                    <div class="link-7" style="width: 16px;" >
                                         <div class="container-64">
                                             <div class="symbol">
                                                 <img class="social" src="../img/Twitter.svg" alt="">
@@ -274,7 +329,7 @@
                                     </div>
                                 </div>
                                 <div class="link-margin-4">
-                                    <div class="link-7">
+                                    <div class="link-7"style="width: 16px;">
                                         <div class="container-64">
                                             <div class="symbol">
                                                 <img class="social" src="../img/Github.svg" alt="">
@@ -291,15 +346,17 @@
                 </div>
             </div>
             <div class="horizontal-border">
-                <div class="paragraph-2">
+                <div class="paragraph-2" style="left: -533px;">
                     <div class="copyright">© Copyright</div>
                     <div class="strong-arsha">Academy Keeper</div>
                     <div class="text-wrapper-39">All Rights Reserved</div>
                 </div>
             </div>
         </footer>
+        </div>
 
-    <script src="terms.js"></script>
+
+
 </body>
 
 </html>
