--- a/front/landing.html
+++ b/front/landing.html
@@ -13,7 +13,7 @@
     <script src="../js/script.js"></script>
     
   </head>
-  <body>
+  <body onload="javascript:swiper()">
         <div class="loading">
           <div class="loader">
             <div>
