--- a/front/Login.html
+++ b/front/Login.html
@@ -1,162 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/globals.css" />
-    <link rel="stylesheet" href="../css/styleguide.css" />
-    <link rel="stylesheet" href="../css/login.css" />
+<html>
 
-    <script src="../js/login.js"></script>
-    <script src="../js/loading.js"></script>
-    <title>Login | Academy Keeper</title>
-  </head>
-  <body onload="javascript:hideLoading();">
-    <div class="loading">
-      <div class="loader">
-        <div>
-          <ul>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-            <li>
-              <svg fill="currentColor" viewBox="0 0 90 120">
-                <path
-                  d="M90,0 L90,120 L11,120 C4.92486775,120 0,115.075132 0,109 L0,11 C0,4.92486775 4.92486775,0 11,0 L90,0 Z M71.5,81 L18.5,81 C17.1192881,81 16,82.1192881 16,83.5 C16,84.8254834 17.0315359,85.9100387 18.3356243,85.9946823 L18.5,86 L71.5,86 C72.8807119,86 74,84.8807119 74,83.5 C74,82.1745166 72.9684641,81.0899613 71.6643757,81.0053177 L71.5,81 Z M71.5,57 L18.5,57 C17.1192881,57 16,58.1192881 16,59.5 C16,60.8254834 17.0315359,61.9100387 18.3356243,61.9946823 L18.5,62 L71.5,62 C72.8807119,62 74,60.8807119 74,59.5 C74,58.1192881 72.8807119,57 71.5,57 Z M71.5,33 L18.5,33 C17.1192881,33 16,34.1192881 16,35.5 C16,36.8254834 17.0315359,37.9100387 18.3356243,37.9946823 L18.5,38 L71.5,38 C72.8807119,38 74,36.8807119 74,35.5 C74,34.1192881 72.8807119,33 71.5,33 Z"
-                ></path>
-              </svg>
-            </li>
-          </ul>
-        </div>
-        <span>Loading</span>
+<head>
+  <title>Academy Keeper</title>
+</head>
+<link rel="stylesheet" href="../css/login.css">
+
+<link rel="stylesheet" href="../css/globals.css">
+<link rel="stylesheet" href="../css/styleguide.css">
+
+<script src="../js/login.js"></script>
+<script src="../js/login.js"></script>
+
+
+
+<body class="body">
+
+  <div class="container">
+
+    <div class="sid-img">
+      <img class="imag" src="https://picsum.photos/770/792"" alt="">
+            </div>
+
+
+
+<div class=" logo">
+      <div class="overlap-group">
+        <a href="landing.html">
+          <img class="untitled" src="../img/untitled-1-1.png" />
+          <div class="text-wrapper">Academy</div>
+          <div class="text-wrapper-2">Keeper</div>
+        </a>
       </div>
     </div>
 
-    <div class="container">
-      <div class="image-section">
-        <img src="../img/about.png" alt="Login Image" />
-      </div>
-      <div class="form-section">
-        <div class="logo">
-          <a href="landing.html">
-            <img src="../img/untitled-1-1.png" alt="Logo" class="logoimg" />
-            <div class="text-a">Academy</div>
-            <div class="text-k">Keeper</div>
-          </a>
-        </div>
-        <h2>Login</h2>
-        <p class="intro-text">Login to access your Academy Keeper Account</p>
-        <form action="#" method="post" id="login-form">
-          <div class="input-group">
-            <div class="input-wrapper">
-              <input type="text" id="id" name="id" required placeholder=" " />
-              <label for="id" class="label">ID</label>
-            </div>
-            <div class="input-wrapper">
-              <input type="text" id="college" name="college" placeholder="" />
-              <label for="college" class="label">College</label>
-            </div>
-            <div class="input-wrapper">
-              <input
-                type="password"
-                id="password"
-                name="password"
-                required
-                placeholder=" "
-              />
-              <label for="password" class="label">Password</label>
-            </div>
-          </div>
-          <div class="checkbox-group">
-            <div>
-              <input type="checkbox" id="remember-me" name="remember-me" />
-              <label for="remember-me">Remember me</label>
-            </div>
-            <div id="forgot-pass">
-              <a href="#">Forgot password?</a>
-            </div>
-          </div>
-          <button type="submit" class="btn">Login</button>
-          <p class="login-text">
-            Don't have an account? <a href="signup.html">Sign up</a>
-          </p>
-          <p class="or-option">Or login with</p>
-        </form>
-        <div class="social-icons">
-          <a href="https://twitter.com" target="_blank" class="link-margin-4">
-            <div class="container-64">
-              <div class="symbol">
-                <img
-                  class="social"
-                  src="../img/Twitter.svg"
-                  alt="Twitter Icon"
-                />
-              </div>
-            </div>
-          </a>
-          <a href="https://github.com" target="_blank" class="link-margin-4">
-            <div class="container-64">
-              <div class="symbol">
-                <img class="social" src="../img/Github.svg" alt="Github Icon" />
-              </div>
-            </div>
-          </a>
-          <a href="https://instagram.com" target="_blank" class="link-margin-4">
-            <div class="container-64">
-              <div class="symbol">
-                <img
-                  class="social"
-                  src="../img/Instagram.svg"
-                  alt="Instagram Icon"
-                />
-              </div>
-            </div>
-          </a>
-          <a href="https://facebook.com" target="_blank" class="link-margin-4">
-            <div class="container-64">
-              <div class="symbol">
-                <img
-                  class="social"
-                  src="../img/Facebook.svg"
-                  alt="Facebook Icon"
-                />
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
+    <div class="login">
+      <h2 class="title">Login</h2>
+      <h4 class="subtitle">
+        Please login to your account.</h4>
+
+
     </div>
-  </body>
+
+    <div class="login-form">
+      <form class="form" action="" method="post">
+
+        <div class="select">
+          <div class="option">
+            <input checked="" value="admin" name="fav_language" id="admin" type="radio" class="input" />
+            <label for="admin" class="label">Administrator</label>
+            <input value="teacher" name="fav_language" id="teacher" type="radio" class="input" />
+            <label for="teacher" class="label">Teacher</label>
+            <input value="student" name="fav_language" id="student" type="radio" class="input" />
+            <label for="student" class="label">Student</label>
+          </div>
+        </div>
+
+
+        <div class="input-group">
+          <div class="input-wrapper">
+            <input type="text" id="id" name="id" required placeholder=" " />
+            <label for="id" class="label">ID</label>
+          </div>
+          <div class="input-wrapper">
+            <input type="text" id="college" name="college" placeholder="" />
+            <label for="college" class="label">College</label>
+          </div>
+          <div class="input-wrapper">
+            <input type="password" id="password" name="password" required placeholder=" " />
+            <label for="password" class="label">Password</label>
+          </div>
+        </div>
+        <div class="checkbox-group">
+          <div class="remember-me">
+            <input type="checkbox" id="remember-me" name="remember-me" />
+            <label for="remember-me">Remember me</label>
+          </div>
+          <div id="forgot-pass">
+            <a href="#">Forgot password?</a>
+          </div>
+        </div>
+        <button type="submit" class="btn">Login</button>
+
+
+        <p class="login-text">
+          Don't have an account? <a class="signup" href="signup.html">Sign up</a>
+        </p>
+
+
+
+
+
+
+
+
+
+
+      </form>
+    </div>
+
+  </div>
+</body>
+
 </html>
