--- a/front/Login.html
+++ b/front/Login.html
@@ -78,7 +78,7 @@
         </div>
         <h2>Login</h2>
         <p class="intro-text">Login to access your Academy Keeper Account</p>
-        <form action="#" method="post" id="login-form">
+        <form action="../PHP/Login.php" method="POST" id="login-form">
           <div class="input-group">
             <div class="input-wrapper">
               <input type="text" id="id" name="id" required placeholder=" " />
@@ -109,11 +109,11 @@
             </div>
           </div>
           <button type="submit" class="btn">Login</button>
-          <p class="login-text">
-            Don't have an account? <a href="signup.html">Sign up</a>
-          </p>
-          <p class="or-option">Or login with</p>
         </form>
+        <p class="login-text">
+          Don't have an account? <a href="signup.html">Sign up</a>
+        </p>
+        <p class="or-option">Or login with</p>
         <div class="social-icons">
           <a href="https://twitter.com" target="_blank" class="link-margin-4">
             <div class="container-64">
