--- a/front/signup.html
+++ b/front/signup.html
@@ -80,7 +80,7 @@
         <p class="intro-text">
           Let's get you all set up so you can access your account.
         </p>
-        <form action="#" method="POST">
+        <form action="../PHP/signup.php" method="POST">
           <div class="input-group">
             <div class="input-wrapper">
               <input
